ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-02-19 Benedikt Heintel
	- DISTS:
		* Fixed #816: [fedora anymaybe others] fastcgi_ispcp.conf not copied causes ispcp-setup to stop
		* Updated Makefiles

2008-02-19 Christian Hernmarck
	- ENGINE:
		* Fixed #1057: more than one backup of db table ispcp
		* Fixed #1058: Validation of "mail setup" make blank page

2008-02-18 Benedikt Heintel
	- CONFIGS:
		* Fixed #259: Using Proftpd 1.3.1-r2 option DisplayFirstChdir give "deprecated and will be removed in a future release"
		* Fixed #1049: postfix dict_nis_init warning
	- GUI:
		* Fixed #1035: Hide "Manage Domains"-icon
		* Fixed #1053: awstats path doesnt work
		* Fixed #1055: Wrong titles in the GUI
		* Refactored menus for admin, reseller, client
	- SETUP:
		* Fixed #970: The uninstaller should not remove /var/www/virtual ...
		* Fixed #982: Problem with autogenerated password
	- TOOLS:
		* Fixed #1054: Set the PHP temporary directory in filemanager
	- DISTS:
		* Fixed #942: ERROR: Undefined intput data, bt: |{PHP_VERSION}|, et: |{PHP_VERSION}|, src !
		* Fixed #961: Split OpenBSD and FreeBSD Makefile so it can be compile
		* Dropped support for SLES (9)
		* Updated CentOS, Fedora, FreeBSD, Gentoo, OpenBSD, OpenSUSE, RedHat, SuSE, ubuntu

2008-02-17 Christian Hernmarck
	- CONFIGS:
		* Fixed #1048: Different AllowOverride settings in apache config

2008-02-16 Benedikt Heintel
	- GUI:
		* Fixed: A lot of inconsistency adding a user while reseller values are eceeded

2008-02-16 Jochen Manz
	- DISTS:
		* Fixed #772: Gentoo init.d scripts broken with changes to make them "LSB compliant"

2008-02-16 Christian Hernmarck
	- ENGINE:
		* Fixed bug in ispcp-als-mngr: since r762 cgi-bin setting were not set correctly for alias domain

2008-02-15 Benedikt Heintel
	- CONFIGS:
		* Fixed #1018: Missing "&" in the cron ?
	- GUI:
		* Fixed #850: If user IP doesn't match the reseller IP the message in manage_reseller_users.php is wrong