@@ -59,7 +59,7 @@ Make sure you are logged in as root.
 	# tar xjvf ispcp-omega-1.0.0-rc4.tar.bz2
 
 2. Change to the newly created directory:
-	# cd ./ispcp-omega-1.0.0-rc4
+	# cd ./ispcp-omega-1.0.0
 
 3. Install the required modules
    First update your system:
@@ -136,7 +136,7 @@ Make sure you are logged in as root.
 	# tar xjvf ispcp-omega-1.0.0-rc4.tar.bz2
 
 2. Change to the newly created directory:
-	# cd ./ispcp-omega-1.0.0-rc4
+	# cd ./ispcp-omega-1.0.0
 
 3. Install the required modules
    first update your system:
