@@ -279,7 +279,7 @@ sub sub_add_named_cfg_data {
 
     my $db_sub_entry_val = "$db_sub_entry_b_val$db_sub_entry$db_sub_entry_e_val\n$db_sub_entry_b$db_sub_entry_e";
 
-    ($rs, $working) = repl_tag($db_sub_entry_b, $db_sub_entry_e, $working, $db_sub_entry_val);
+    ($rs, $working) = repl_tag($db_sub_entry_b, $db_sub_entry_e, $working, $db_sub_entry_val, "sub_add_named_cfg_data");
 
     return $rs if ($rs != 0);
 
@@ -300,7 +300,7 @@ sub sub_add_named_cfg_data {
 
     my $db_time_val = "$db_time_b\t\t\t $time2\t\n$db_time_e";
 
-    ($rs, $working) = repl_tag($db_time_b, $db_time_e, $working, $db_time_val);
+    ($rs, $working) = repl_tag($db_time_b, $db_time_e, $working, $db_time_val, "sub_add_named_cfg_data");
 
     return $rs if ($rs != 0);
 
@@ -495,7 +495,7 @@ sub sub_del_named_cfg_data {
 
     my $db_time_val = "$db_time_b\t\t\t $time2\t\n$db_time_e";
 
-    ($rs, $working) = repl_tag($db_time_b, $db_time_e, $working, $db_time_val);
+    ($rs, $working) = repl_tag($db_time_b, $db_time_e, $working, $db_time_val, "sub_del_named_cfg_data");
 
     return $rs if ($rs != 0);
 
@@ -773,7 +773,8 @@ sub gen_httpd_sub_group_entry {
                                  $sub_cgi_b,
                                  $sub_cgi_e,
                                  $sub_entry,
-                                 $cgi_entry
+                                 $cgi_entry,
+                                 "gen_httpd_sub_group_entry"
                                 );
 
     return ($rs, '') if ($rs != 0);
@@ -798,7 +799,8 @@ sub gen_httpd_sub_group_entry {
                                      $sub_php2_b,
                                      $sub_php2_e,
                                      $sub_entry,
-                                     $php2_entry
+                                     $php2_entry,
+                                     "gen_httpd_sub_group_entry"
                                     );
 
         return ($rs, '') if ($rs != 0);
@@ -809,7 +811,8 @@ sub gen_httpd_sub_group_entry {
                                  $sub_php_b,
                                  $sub_php_e,
                                  $sub_entry,
-                                 $php_entry
+                                 $php_entry,
+                                 "gen_httpd_sub_group_entry"
                                 );
 
     return ($rs, '') if ($rs != 0);
@@ -1040,7 +1043,7 @@ sub sub_add_httpd_cfg_data {
     # Fit all back to top;
     #
 
-    ($rs, $vh_entry_working) = repl_tag($dg_b_val, $dg_e_val, $vh_entry_working, $dg_entry_working);
+    ($rs, $vh_entry_working) = repl_tag($dg_b_val, $dg_e_val, $vh_entry_working, $dg_entry_working, "sub_add_httpd_cfg_data");
 
     return $rs if ($rs != 0);
 
@@ -1048,7 +1051,8 @@ sub sub_add_httpd_cfg_data {
                                $vh_b_val,
                                $vh_e_val,
                                $working,
-                               $vh_entry_working
+                               $vh_entry_working,
+                               "sub_add_httpd_cfg_data"
                               );
 
     return $rs if ($rs != 0);
@@ -1061,7 +1065,7 @@ sub sub_add_httpd_cfg_data {
 
     if ($rs == 0) {
 
-        ($rs, $sys) = repl_tag($cfg_b, $cfg_e, $sys, $working);
+        ($rs, $sys) = repl_tag($cfg_b, $cfg_e, $sys, $working, "sub_add_httpd_cfg_data");
 
         return $rs if ($rs != 0);
 
@@ -1317,7 +1321,7 @@ sub sub_del_httpd_cfg_data {
     # Fit all back to top;
     #
 
-    ($rs, $vh_entry_working) = repl_tag($dg_b_val, $dg_e_val, $vh_entry_working, $dg_entry_working);
+    ($rs, $vh_entry_working) = repl_tag($dg_b_val, $dg_e_val, $vh_entry_working, $dg_entry_working, "sub_del_httpd_cfg_data");
 
     return $rs if ($rs != 0);
 
@@ -1325,7 +1329,8 @@ sub sub_del_httpd_cfg_data {
                                $vh_b_val,
                                $vh_e_val,
                                $working,
-                               $vh_entry_working
+                               $vh_entry_working,
+                               "sub_del_httpd_cfg_data"
                               );
 
     return $rs if ($rs != 0);
@@ -1338,7 +1343,7 @@ sub sub_del_httpd_cfg_data {
 
     if ($rs == 0) {
 
-        ($rs, $sys) = repl_tag($cfg_b, $cfg_e, $sys, $working);
+        ($rs, $sys) = repl_tag($cfg_b, $cfg_e, $sys, $working, "sub_del_httpd_cfg_data");
 
         return $rs if ($rs != 0);
 
